--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
             <input type="text" placeholder="Procurar">
             <div>
-                <img src="imagem-carrinho.png">
+                <img src="img/carrinho.png">
             </div>
         </div>
     </header>
@@ -37,7 +37,7 @@
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div>
-                <img src="./tenis.png">
+                <img src="img/tenis.png">
             </div>
         </section>
 
@@ -49,7 +49,7 @@
                 <li>Cinza</li>
                 <li>Grafite</li>
             </ul>
-            <img src="./tenis-branco.png" alt="Tênis Branco">
+            <img src="img/tenis-branco.png" alt="Tênis Branco">
             <span>Branco</span>
             <button>Adicionar ao Carrinho</button>
         </aside>
@@ -60,13 +60,14 @@
                 <p>A construção ligeira de espuma e malha não te torna lento ao fazer os exercicios de agilidade. Um «burpee break» na parte frontal do pé torna-o suficiente flexível para fazer a prancha ou  o Mountain Climber.</p>
             </div>
             <div>
-                <img src="./leveza-e-agilidade.png" alt="Tênis Hylo">
+                <img src="img/leveza-e-agilidade.png" alt="Tênis Hylo">
             </div>
         </section>
 
         <section>
             <div>
-                <img src="./amortecimento-imediato.png" alt="Amortecimento Imediato">
+                <img src="img/amortecimento-imediato.png" alt="Amortecimento Imediato">
+                <img src="img/amortecimento-imediato2.png" alt="Amortecimento Imediato">
             </div>
             <div>
                 <h2>Amortecimento imediato</h2>
@@ -75,13 +76,13 @@
         </section>
 
         <aside>
-            <img src="./arrow.png">
+            <img src="img/arrow.png">
             <span>Corra<br> Como se o mundo<br> dependesse de você</span>
         </aside>
 
         <section>
             <div>
-                <img src="./images/mapa.png" alt="Nosso Endereço">
+                <img src="img/img-mapa.png" alt="Nosso Endereço">
             </div>
             <div>
                 <h3>Contate-nos</h3>
@@ -124,14 +125,14 @@
         <div>
             <ul>
                 <li>Redes Sociais</li>
-                <li><a href="instragram.com" target="_black">
-                    <img src="images/instagram.png" alt="Instagram">
+                <li><a href="https://www.instragram.com" target="_black">
+                    <img src="img/Instagram.png" alt="Instagram">
                 </a></li>
-                <li><a href="facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="Facebook">
+                <li><a href="www.facebook.com" target="_blank">
+                    <img src="img/Facebook.png" alt="Facebook">
                 </a></li>
-                <li><a href="twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="Twitter">
+                <li><a href="www.twitter.com" target="_blank">
+                    <img src="img/Twitter.png" alt="Twitter">
                 </a></li>
             </ul>
         </div>
