Lição de Casa - Mod. 04

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
         <div>
             <ul>
                 <li>Redes Sociais</li>
-                <li><a href="https://www.instragram.com" target="_black">
+                <li><a href="https://www.instagram.com" target="_black">
                     <img src="img/Instagram.png" alt="Instagram">
                 </a></li>
-                <li><a href="www.facebook.com" target="_blank">
+                <li><a href="https://www.facebook.com" target="_blank">
                     <img src="img/Facebook.png" alt="Facebook">
                 </a></li>
-                <li><a href="www.twitter.com" target="_blank">
+                <li><a href="https://www.twitter.com" target="_blank">
                     <img src="img/Twitter.png" alt="Twitter">
                 </a></li>
             </ul>
