--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <h1>SNEAK.</h1>
         <nav>
             <ul>
@@ -29,19 +29,19 @@
         </div>
     </header>
 
-    <main>
-        <section>
+    <main class="main">
+        <section class="section-main">
             <div>
                 <h2>SNEAK. <br />Ultra light</h2>
                 <p>Os tênis SNEAK foram criados especificamente para treinos em circuito, sejam aulas de fitness online em casa ou sua propia rotina de treinos diaros.</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
-            <div>
+            <div class="vitrine-tenis">
                 <img src="img/tenis.png">
             </div>
         </section>
 
-        <aside>
+        <aside class="vitrine">
             <h2>Corrida - Masculino</h2>
             <ul>
                 <li>Branco</li>
@@ -54,7 +54,7 @@
             <button>Adicionar ao Carrinho</button>
         </aside>
 
-        <section>
+        <section class="publi-one">
             <div>
                 <h2>Leveza e agilidade</h2>
                 <p>A construção ligeira de espuma e malha não te torna lento ao fazer os exercicios de agilidade. Um «burpee break» na parte frontal do pé torna-o suficiente flexível para fazer a prancha ou  o Mountain Climber.</p>
@@ -64,7 +64,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="publi-two">
             <div>
                 <img src="img/amortecimento-imediato.png" alt="Amortecimento Imediato">
                 <img src="img/amortecimento-imediato2.png" alt="Amortecimento Imediato">
@@ -75,16 +75,26 @@
             </div>
         </section>
 
-        <aside>
+        <section class="publi-three">
+            <div>
+                <h2>Sensação de<br>estabilização</h2>
+                <p>O outrigger — a projeção lateral — estabiliza o pé ao fazer os movimentos laterais, como por exemplo o Skater Squat.</p>
+            </div>
+            <div>
+                <img src="img/sensação-de-estabilização.png" alt="sensação de estabilização">
+            </div>
+        </section>
+
+        <aside class="run-tenis">
             <img src="img/arrow.png">
             <span>Corra<br> Como se o mundo<br> dependesse de você</span>
         </aside>
 
-        <section>
+        <section class="mapa">
             <div>
                 <img src="img/img-mapa.png" alt="Nosso Endereço">
             </div>
-            <div>
+            <div class="contact">
                 <h3>Contate-nos</h3>
                 <form>
                     <input type="text" placeholder="Nome">
@@ -102,7 +112,7 @@
 
     <footer>
         <h3>SNEAK.</h3>
-        <div>
+        <div class="column-one">
             <ul>
                 <li>Sobre a SNEAK</li>
                 <li><a href="#">Novidades</a></li>
@@ -112,7 +122,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="column-two">
             <ul>
                 <li>Ajuda</li>
                 <li><a href="#">Status do Pedido</a></li>
@@ -122,7 +132,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="column-three">
             <ul>
                 <li>Redes Sociais</li>
                 <li><a href="https://www.instagram.com" target="_black">
