Layout de três seções

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
         </section>
 
         <section class="publi-one">
-            <div>
-                <h2>Leveza e agilidade</h2>
-                <p>A construção ligeira de espuma e malha não te torna lento ao fazer os exercicios de agilidade. Um «burpee break» na parte frontal do pé torna-o suficiente flexível para fazer a prancha ou  o Mountain Climber.</p>
-            </div>
-            <div>
-                <img src="img/leveza-e-agilidade.png" alt="Tênis Hylo">
+            <div class="publi-one-container">
+                <div class="publi-one-text">
+                    <h2>Leveza e agilidade</h2>
+                    <p>A construção ligeira de espuma e malha não te torna lento ao fazer os exercicios de agilidade. Um «burpee break» na parte frontal do pé torna-o suficiente flexível para fazer a prancha ou  o Mountain Climber.</p>
+                </div>
+                <div class="publi-one-img">
+                    <img src="img/leveza-e-agilidade.png" alt="Tênis Hylo">
+                </div>
             </div>
         </section>
 
