--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <section class="vitrine">
             <div class="vitrine-container">
                 <h2 class="vitrine-title">Corrida - Masculino</h2>
-                <ul class="vitrine-list">
-                    <li class="vitrine-list-item">Branco</li>
-                    <li class="vitrine-list-item">Natural</li>
-                    <li class="vitrine-list-item">Preto/Branco</li>
-                    <li class="vitrine-list-item">Preto</li>
+                <ul id="cores" class="vitrine-list">
+                    <li class="vitrine-list-item color color-white selected"></li>
+                    <li class="vitrine-list-item color color-natural"></li>
+                    <li class="vitrine-list-item color color-p_b"></li>
+                    <li class="vitrine-list-item color color-black"></li>
                 </ul>
                 <img class="vitrine-image" src="img/tenis-branco.png" alt="Tênis Branco">
                 <span class="vitrine-details">Branco</span>
@@ -157,10 +157,11 @@
             </div>
         </div>
         <div class="footer-corpyright">
-            CREATE BY <a href="https://www.linkedin.com/in/jefferson-nunes/" target="_blank">Jefferson Nunes</a> | DESIGNED BY <a href="https://mentorama.co" target="_blank"><strong>MENTORAMA</strong></a>
+            developed by <a href="https://www.linkedin.com/in/jefferson-nunes/" target="_blank">Jefferson Nunes</a> | DESIGNED BY <a href="https://mentorama.co" target="_blank"> <img src="./img/mentorama..svg" alt=""></a>
         </div>
     </footer>
 
-    <script src="./main.js"></script>
+    <script src="./js/script.js"></script>
+
 </body>
 </html>
